--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -5,29 +5,26 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Pre-merge workflow
+name: Post Merge Actions
 
 on:
-  pull_request:
+  push:
     branches: [ "master" ]
 
 permissions:
   contents: read
 
 jobs:
-  build:
+  integration:
+
     runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
-
-        # Setting up JDK 11 could be time-consuming for self-hosted runner
-        # depending on the internet speed of the machine
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-
-      - name: Build and run battery, unit and functional tests
-        run: ./gradlew clean build -Ptags="battery,unit,functional"
+      #       - name: Set up JDK 11
+      #         uses: actions/setup-java@v3
+      #         with:
+      #           java-version: '11'
+      #           distribution: 'temurin'
+      - name: Build with Gradle
+        run: ./gradlew clean build -Ptags=integration
