--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,12 @@
 name: Pre-merge workflow
 
 on:
+  push:
+    - '[0-9]+.[0-9]+.z'
+    - '[0-9]+.[0-9]+.0'
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 permissions:
   contents: read
