--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,6 @@ jobs:
 
       - name: Build and run battery, unit and functional tests
         run: |
-          echo ${{github.event.number}}
-          echo $GITHUB_REF
-          echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }'
-          ./gradlew clean build -Ptags="battery,unit,functional"
+          PR_NUMBER="${{github.event.number}}-SNAPSHOT"
+          echo $PR_NUMBER
+          ./gradlew clean build artifactVersion -x test -Ptags="battery,unit,functional" -PartifactVersion=${PR_NUMBER}
