--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,14 @@ buildscript {
     }
 
     apply from: 'https://raw.githubusercontent.com/blackducksoftware/integration-resources/master/gradle_common/buildscript-repositories.gradle', to: buildscript
-
+//    repositories {
+//        maven { url "https://sig-repo.synopsys.com/bds-bdio-release" }
+//        mavenCentral()
+//        maven { url 'https://plugins.gradle.org/m2/' }
+//    }
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath("org.jfrog.buildinfo:build-info-extractor-gradle:4.25.1")
     }
 }
 
@@ -23,6 +28,9 @@ group = 'com.synopsys.integration'
 //version = '8.9.0-SNAPSHOT'
 
 //apply plugin: 'com.synopsys.integration.solution'
+apply plugin: 'java-library'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -46,7 +54,11 @@ def createBatteryPath() {
 }
 
 repositories {
+    mavenLocal()
+//    maven { url "https://sig-repo.synopsys.com/bds-integrations-release" }
     maven { url "https://sig-repo.synopsys.com/bds-bdio-release" }
+    mavenCentral()
+    maven { url 'https://plugins.gradle.org/m2/' }
 }
 
 subprojects {
